apps/ubys-student-portal/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubys-student-portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ubys-student-portal.staging.ubys.example.com
      secretName: ubys-student-portal-staging-tls
  rules:
    - host: ubys-student-portal.staging.ubys.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ubys-student-portal
                port:
                  number: 80
